added checkbox for provider enabled